k8s/04-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: search-indexing-kiii
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: "marijakarapandzova/search-indexing-backend:latest"
          ports:
            - containerPort: 8080
