k8s/06-app-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: search-indexing-kiii
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: search-indexing-kiii
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
